# alimentario

./: README.md  pyproject.toml  requirements.txt  setup.py
alimentario.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/alimentario/: __init__.py
app/alimentario.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app/alimentario/src/: __init__.py
app/aplicativo/: app.py
app/src/: app.py
documents/: PI - impactos aplicativo - 17 out 2023.docx
notebooks/: agricultores_familiares.ipynb  consumidores.ipynb  consumidores_test.ipynb  demo.ipynb  main.ipynb  sites_plataformas.ipynb
src/: alimentario.py  app.py  test_app.py  test_with_columns.py
src/alimentario/: __init__.py
tests/: test_alimentario.py
