[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alimentario"
version = "0.1.0"
authors = [
  { name="Pedro Lealdino Filho", email="admin@dataverso.com.br" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
